--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <section class="min-vh-100 d-flex align-items-center justify-content-center flex-column bg-color">
+    <section class="min-vh-100 d-flex align-items-center justify-content-center flex-column bg-color py-20">
         <div class="container w-100">
             <h1 class="heading-1">Our Great Clients</h1>
             <p class="page">Startup includes great form options for your startup projects. Each component is coded for
